[package]
name = "calendario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
rocket = {version = "0.5.1", features = ["json"]}
chrono = {version = "0.4.38", features = ["serde"]}
serde = "1.0.202"
dotenvy = "0.15.7"
dotenv = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera"]